LIPS-302 Prod Issue - Hashtag border is truncated  -PFA

--- a/src/assets/sass/custom/_devp.scss
+++ b/src/assets/sass/custom/_devp.scss
@@ -735,4 +735,29 @@ span.countBadge {
   width: auto;
   height: auto;
 }
-
+.themeOutlineLight {
+    background-color: transparent;
+    color: #f8f9fa;
+    border: 1px solid #f8f9fa;
+    margin: 0 10px 8px 0;
+    padding: 5px 8px;
+    display: inline-block;
+    background-image: none;
+    vertical-align: middle;
+    font-size: 16px;
+    line-height: 1.3;
+    border-radius: 5px;
+    letter-spacing: 1.8px;
+    transition: all,.4s,ease-in-out;
+    cursor: pointer;
+    &:hover, &:focus {
+      background-color: #f8f9fa;
+      border-color: #f8f9fa;
+      color: #212529;
+    }
+    &.active {
+      color: #212529;
+      background-color: #f8f9fa!important;
+      border-color: #f8f9fa;
+    }
+}
